auto rag completed, cleaned repo, fixed ui

--- a/example.env
+++ b/example.env
@@ -8,6 +8,6 @@ MISTRAL_7B_INSTRUCT = "mistralai/Mistral-7B-Instruct-v0.1"
 DB_URL = BASE_DIR  + "Data/tables.db"
 
 EXPERIMENT_LOGGER = BASE_DIR  + "Data/Query Results/structured_rag.csv"
-EXCEL_FILE = BASE_DIR  + 'Data/portfolios.xlsx'
-CSV_FOLDER = BASE_DIR  + 'Data/Scrapes/'
+EXCEL_FILE_PATH = BASE_DIR  + 'Data/portfolios.xlsx'
+SOURCE_DOCUMENTS_PATH = BASE_DIR  + 'Data/Scrapes/'
 ASSET_MAPPING_PATH = BASE_DIR  + 'Data/asset_mapping.csv'
