--- a/example.env
+++ b/example.env
@@ -1,13 +1,28 @@
-HF_TOKEN='paste token here'
-
 BASE_DIR = '/home/eklavya/Capstone/'
 
-CACHE_DIR = BASE_DIR  + ".cache"
+HF_TOKEN=""
+OPENAI_API_KEY=""
+
+CACHE_DIR = ".cache"
 MISTRAL_7B_INSTRUCT = "mistralai/Mistral-7B-Instruct-v0.1"
+FINETUNED_MISTRAL = "danyoung/finance-qa"
 
-DB_URL = BASE_DIR  + "Data/tables.db"
+DB_URL = "data/tables.db"
 
-EXPERIMENT_LOGGER = BASE_DIR  + "Data/Query Results/structured_rag.csv"
-EXCEL_FILE_PATH = BASE_DIR  + 'Data/portfolios.xlsx'
-SOURCE_DOCUMENTS_PATH = BASE_DIR  + 'Data/Scrapes/'
-ASSET_MAPPING_PATH = BASE_DIR  + 'Data/asset_mapping.csv'
+EXCEL_FILE_PATH = 'data/portfolios.xlsx'
+SOURCE_DOCUMENTS_PATH = 'data/scrapes/'
+ASSET_MAPPING_PATH = 'data/asset_mapping.csv'
+
+EXPERIMENT_LOGGER_AUTO = "data/query_results/auto_rag.csv"
+EXPERIMENT_LOGGER_STRUCTURED = "data/query_results/structured_rag.csv"
+EXPERIMENT_LOGGER_UNSTRUCTURED = "data/query_results/unstructured_rag.csv"
+
+VECTOR_DB_INDEX = "data/vectordb"
+GRAPH_DB_INDEX = "data/graphdb"
+
+CHAT_HISTORY_AUTO = "data/chat_history/auto_rag.pkl"
+CHAT_HISTORY_STRUCTURED = "data/chat_history/structured_rag.pkl"
+CHAT_HISTORY_UNSTRUCTURED = "data/chat_history/unstructured_rag.pkl"
+
+CREDENTIAL_FILENAME = "Data/gcloud.json"
+BUCKET_NAME = "capstone-8e7b-4418"
