--- a/example.env
+++ b/example.env
@@ -1,11 +1,12 @@
 BASE_DIR = '/home/eklavya/Capstone/'
 
-HF_TOKEN=""
-OPENAI_API_KEY=""
+HF_TOKEN='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'
+OPENAI_API_KEY="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"
 
 CACHE_DIR = ".cache"
 MISTRAL_7B_INSTRUCT = "mistralai/Mistral-7B-Instruct-v0.1"
 FINETUNED_MISTRAL = "danyoung/finance-qa"
+DPO_MISTRAL = "danyoung/finance-qa-dpo"
 
 DB_URL = "data/tables.db"
 
@@ -16,6 +17,7 @@ ASSET_MAPPING_PATH = 'data/asset_mapping.csv'
 EXPERIMENT_LOGGER_AUTO = "data/query_results/auto_rag.csv"
 EXPERIMENT_LOGGER_STRUCTURED = "data/query_results/structured_rag.csv"
 EXPERIMENT_LOGGER_UNSTRUCTURED = "data/query_results/unstructured_rag.csv"
+EXPERIMENT_LOGGER_CHATBOT = "data/query_results/chatbot.csv"
 
 VECTOR_DB_INDEX = "data/vectordb"
 GRAPH_DB_INDEX = "data/graphdb"
@@ -23,6 +25,7 @@ GRAPH_DB_INDEX = "data/graphdb"
 CHAT_HISTORY_AUTO = "data/chat_history/auto_rag.pkl"
 CHAT_HISTORY_STRUCTURED = "data/chat_history/structured_rag.pkl"
 CHAT_HISTORY_UNSTRUCTURED = "data/chat_history/unstructured_rag.pkl"
+CHAT_HISTORY_CHATBOT = "data/chat_history/chatbot.pkl"
 
-CREDENTIAL_FILENAME = "Data/gcloud.json"
+CREDENTIAL_FILENAME = "data/gcloud.json"
 BUCKET_NAME = "capstone-8e7b-4418"
