--- a/example.env
+++ b/example.env
@@ -1,7 +1,7 @@
 BASE_DIR = '/home/eklavya/Capstone/'
 
-HF_TOKEN='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'
-OPENAI_API_KEY="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"
+HF_TOKEN=''
+OPENAI_API_KEY=""
 
 CACHE_DIR = ".cache"
 MISTRAL_7B_INSTRUCT = "mistralai/Mistral-7B-Instruct-v0.1"
